--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3"
   },
